--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <h1>Amelia Hitchcock</h1>
     </header>
     <main>
         <p>Hello World!</p>
+        <p>Your mum is gay</p>
     </main>
     <script src="js/scripts.js"></script>
 </body>
