changes to cache - please work

--- a/about.html
+++ b/about.html
@@ -19,8 +19,7 @@
     </header>
     <main>
         <section>
-            <h2>Who I Am</h2>
-            <p>Wouldn't you like to know, weather boy?</p>
+            <p>I am currently studying engineering and majoring in robotics and mechatronics. I do various projects which consist of designing and creating engineering CAD 3D models and I print them on my Bambu Labs P1P 3D printer.</p>
         </section>
     </main>
 </body>
