--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amelia Hitchcock</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 </head>
 <body>
     <header>
@@ -20,7 +23,8 @@
     <main>
         <p>Hello World!</p>
         <p>Your mum is gay</p>
+        <button id="myButton">Click Me</button>
     </main>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=1.0"></script>
 </body>
 </html>
