Maybe email fixed?

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Contact | Amelia Hitchcock</title>
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
 </head>
 <body>
     <header>
@@ -20,7 +23,7 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <form action="ameliahitchcock7@gmail.com" method="POST">
+            <form action="mailto:ameliahitchcock7@gmail.com" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 
