--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <form action="mailto:ameliahitchcock7@gmail.com" method="POST">
+            <form id="contact-form" action="mailto:ameliahitchcock7@gmail.com" method="POST" enctype="text/plain">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 
@@ -37,5 +37,6 @@
             </form>
         </section>
     </main>
+    <script src="js/scripts.js?v=1.0"></script>
 </body>
 </html>
