--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <main>
         <section>
             <h2>Get in Touch</h2>
-            <form id="contact-form" action="mailto:ameliahitchcock7@gmail.com" method="POST" enctype="text/plain">
+            <form id="contact-form" onsubmit="sendEmail(event)">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 
@@ -37,6 +37,16 @@
             </form>
         </section>
     </main>
-    <script src="js/scripts.js?v=1.0"></script>
+    <script>
+        function sendEmail(event) {
+            event.preventDefault();
+            const name = document.getElementById('name').value;
+            const email = document.getElementById('email').value;
+            const message = document.getElementById('message').value;
+            const subject = `Contact form submission from ${name}`;
+            const body = `Name: ${name}\nEmail: ${email}\n\nMessage:\n${message}`;
+            window.location.href = `mailto:ameliahitchcock7@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
+        }
+    </script>
 </body>
 </html>
