--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
             <h2>Get in Touch</h2>
             <p>Please note that this form will open your email client to send the message. Do not include sensitive information.</p>
             <form id="contact-form" onsubmit="sendEmail(event)">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <label for="subject">Subject:</label>
+                <input type="text" id="subject" name="subject" required>
                 
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
@@ -41,11 +41,10 @@
     <script>
         function sendEmail(event) {
             event.preventDefault();
-            const name = document.getElementById('name').value;
+            const subject = document.getElementById('subject').value;
             const email = document.getElementById('email').value;
             const message = document.getElementById('message').value;
-            const subject = name;
-            const body = `You have received a new message from your website contact form.\n\nHere are the details:\n\nName: ${name}\nEmail: ${email}\n\nMessage:\n${message}`;
+            const body = `${message}`;
             window.location.href = `mailto:ameliahitchcock7@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
         }
     </script>
