--- a/about.html
+++ b/about.html
@@ -10,20 +10,14 @@
     <meta http-equiv="Expires" content="0">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <h1>About Me</h1>
-    </header>
+    <header></header>
     <main>
         <section>
             <p>I am currently studying engineering and majoring in robotics and mechatronics. I do various projects which consist of designing and creating engineering CAD 3D models and I print them on my Bambu Labs P1P 3D printer.</p>
         </section>
     </main>
+    <footer></footer>
+    <script src="js/loadHeaderFooter.js"></script>
+    <script src="js/scripts.js?v=1.0"></script>
 </body>
 </html>
