--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,7 @@
     <meta http-equiv="Expires" content="0">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <h1>Contact Me</h1>
-    </header>
+    <header></header>
     <main>
         <section>
             <h2>Get in Touch</h2>
@@ -38,6 +29,8 @@
             </form>
         </section>
     </main>
+    <footer></footer>
+    <script src="js/loadHeaderFooter.js"></script>
     <script>
         function sendEmail(event) {
             event.preventDefault();
