--- a/index.html
+++ b/index.html
@@ -10,21 +10,14 @@
     <meta http-equiv="Expires" content="0">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <h1>Amelia Hitchcock</h1>
-    </header>
+    <header></header>
     <main>
         <p>Hello World!</p>
         <p>Your mum is gay</p>
         <button id="myButton">Click Me</button>
     </main>
+    <footer></footer>
+    <script src="js/loadHeaderFooter.js"></script>
     <script src="js/scripts.js?v=1.0"></script>
 </body>
 </html>
